# anonimal

./: .gitignore  .secrets.baseline  .trivyignore  CHANGELOG.md  Dockerfile  Dockerfile.lite  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
anonimal_lite/: __init__.py  base.py  labels.py  latam.py  modes.py  rules.py
anonimal_lite/ui/: anon-options.js
app/: engines.py  lockatus_client.py  main.py  opf_engine.py  pdf.py
app/engine/: __init__.py  base.py  common.py  formats.py  labels.py  latam.py  lite_engine.py  modes.py  opf_engine.py  rules.py
app/static/: app.js  i18n.js  index.html  style.css  theme-init.js
brand/: BRANDING.md  _render.py
docs/: ARCHITECTURE.md  DEPLOY.md
examples/: anon-options-demo.html  demo.js
scripts/: smoke.py
tests/: run_tests.py  test_api.py  test_api_coverage.py  test_engine.py  test_pdf.py  test_privacy.py  test_quality.py  test_rules.py
