# anonimal-lite: el motor liviano (regex, stdlib puro) publicado como librería
# instalable, para que cada satélite del ecosistema lo bundlee como fallback
# standalone. El SERVICIO (FastAPI + OPF + PDF) vive en app/ y se corre aparte
# (no se instala como paquete; sus deps están en requirements.txt).

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "anonimal-lite"
version = "0.3.0"
description = "Motor de anonimización de PII liviano (regex + LATAM, stdlib puro): fallback standalone del ecosistema Anonimal."
requires-python = ">=3.11"
dependencies = []                      # stdlib puro: cero dependencias
license = { text = "Apache-2.0" }
authors = [{ name = "Diego Parras" }]

[project.urls]
Homepage = "https://github.com/diegoparras/anonimal"

[tool.setuptools]
packages = ["anonimal_lite"]           # solo la librería; app/ no se empaqueta

[tool.setuptools.package-data]
# El componente JS compartido viaja DENTRO del paquete (fuente única para los 3).
anonimal_lite = ["ui/*.js"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["brand", ".venv"]

[tool.ruff.lint]
# A proposito NO incluimos estilo cosmetico (E/W de largo de linea, etc.):
# buscamos codigo redundante/muerto/buggy, no formato.
#   F   pyflakes      -> imports/variables sin usar, redefiniciones
#   B   bugbear       -> patrones propensos a bugs
#   SIM flake8-simplify-> codigo redundante simplificable
#   UP  pyupgrade     -> sintaxis obsoleta
#   C90 mccabe        -> complejidad ciclomatica
#   RUF reglas de ruff
#   I   isort         -> imports desordenados/duplicados
select = ["F", "B", "SIM", "UP", "C90", "RUF", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.flake8-bugbear]
# FastAPI usa estas llamadas en los defaults de los handlers a proposito.
extend-immutable-calls = [
  "fastapi.Depends", "fastapi.File", "fastapi.Form", "fastapi.Header", "fastapi.Query",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
files = ["app", "anonimal_lite"]

[[tool.mypy.overrides]]
# `opf` (opcional) y `fitz`/PyMuPDF no traen stubs de tipos.
module = ["opf.*", "fitz", "fitz.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["app", "anonimal_lite"]
# El wrapper ML solo se ejercita con el modelo cargado (no en CI/local sin OPF).
omit = ["app/opf_engine.py"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.bandit]
# bandit -c pyproject.toml -r app anonimal_lite
exclude_dirs = ["tests", "brand", ".venv"]

[tool.vulture]
paths = ["app", "anonimal_lite"]
min_confidence = 70
exclude = ["brand", ".venv"]
# Los handlers de FastAPI se usan via decorador (no por nombre) -> no son dead code.
ignore_decorators = ["@app.*"]
ignore_names = ["lifespan", "device", "error"]
